Initial emdb-gateway-service