@@ -19,6 +19,7 @@ dependencies {
 	implementation libs.quarkus.hibernate.validator
 	implementation libs.quarkus.jdbc.postgres
 	implementation libs.quarkus.logging
+	implementation libs.quarkus.rabbitmq
 	implementation libs.quarkus.rest.jackson
 	
 	testImplementation libs.quarkus.junit5
@@ -30,7 +31,6 @@ version = '1.0.0-SNAPSHOT'
 
 quarkusDev {
   jvmArgs = [
-  	'--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-  	'--enable-native-access=ALL-UNNAMED',
+    '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
   ]
 }
